fixed issue with temp not showing

--- a/src/components/weather-details/styles.scss
+++ b/src/components/weather-details/styles.scss
@@ -40,13 +40,8 @@
   }
 
   .weather--box__details-content{
-    //width: 50%;
-    margin-top: 20px;
+    margin-top: 60px;
     margin-left: 50px;
-  }
-  .weather--box__main-content,
-  .weather--box__details-content {
-    //width: 50%;
   }
 
 }
