--- a/src/components/weather-forecast/styles.scss
+++ b/src/components/weather-forecast/styles.scss
@@ -1,5 +1,6 @@
 $box-active: #d8daeb;
-$container-bgc: #f0faec;
+//$container-bgc: #f0faec;
+$container-bgc: #f4ebf3;
 
 .container--forecast {
   background-color: $container-bgc;
